--- a/app/src/main/res/drawable/toolbar_background.xml
+++ b/app/src/main/res/drawable/toolbar_background.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--the shadow comes from here-->
+    <!--the shadow comes from here
     <item
         android:elevation="5dp">
         <shape android:shape="rectangle">
             <solid android:color="#0C0A0A" />
             <corners android:radius="8dp" />
         </shape>
-    </item>
+    </item>-->
 
     <item
-        android:bottom="2dp"
+        android:bottom="0dp"
         android:left="0dp"
         android:right="0dp"
         android:top="0dp">
