--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:padding="8dp"
+            android:visibility="gone"
             app:iconNormal="@drawable/ic_17"
             app:isCheckable="true"
             app:tooltip="Volleyball" />
@@ -62,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:padding="8dp"
+            android:visibility="gone"
             app:iconNormal="@drawable/ic_18"
             app:isCheckable="true"
             app:tooltip="Boxing" />
@@ -71,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:padding="8dp"
+            android:visibility="gone"
             app:iconNormal="@drawable/ic_19"
             app:isCheckable="true"
             app:tooltip="Rugby" />
