--- a/app/src/main/res/drawable/ic_13.xml
+++ b/app/src/main/res/drawable/ic_13.xml
@@ -4,7 +4,9 @@
     android:tint="#FFFFFF"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <group android:translateX="24" android:scaleX="-1">
+    <group
+        android:translateX="24"
+        android:scaleX="-1">
         <path
             android:fillColor="@android:color/white"
             android:pathData="M5.88,4.12L13.76,12l-7.88,7.88L8,22l10,-10L8,2z" />
